@@ -392,16 +392,6 @@ Keybindings:
     (goto-char (point-max))
     (insert event)))
 
-(defun fsvn-browse-ls-insert-repos-directory (info directory-url)
-  (let* ((entries (fsvn-get-ls directory-url))
-         (path (fsvn-info-repos-path info)))
-    (setq entries (sort entries fsvn-browse-ls-comparer))
-    (fsvn-browse-draw-path path)
-    (mapc
-     (lambda (x)
-       (fsvn-browse-ls-insert-repos-entry x))
-     entries)))
-
 (defun fsvn-browse-ls-insert-wc-directory (directory)
   (let* (file-entries status-entries status-entry entries)
     (setq file-entries (fsvn-browse-ls-directory-files directory))
@@ -936,37 +926,32 @@ PATH is each executed path."
    (t
     (error "Cannot put mark on this line."))))
 
-(defun fsvn-browse-switch-directory-buffer (directory-urlrev &optional revert)
+(defun fsvn-browse-switch-directory-buffer (directory-urlrev &optional revert goto-file)
   (if (fsvn-url-local-p directory-urlrev)
       (fsvn-browse-draw-local-directory directory-urlrev revert)
-    (fsvn-browse-draw-repos-directory directory-urlrev revert))
+    (fsvn-browse-draw-repos-directory directory-urlrev revert goto-file))
   (set-visited-file-modtime (current-time))
   (setq buffer-read-only t)
   (switch-to-buffer (current-buffer))
   (run-hooks 'fsvn-browse-mode-prepared-hook))
 
-(defun fsvn-browse-draw-repos-directory (directory-urlrev &optional type)
-  (let (buffer info comparer)
+(defun fsvn-browse-draw-repos-directory (directory-urlrev &optional type goto-file)
+  (let (buffer comparer)
     (set-buffer
      (cond
       ((eq type 'revert)
-       (setq info (fsvn-get-info-entry directory-urlrev))
-       (when (null info)
-         (error "%s is not a repository" directory-urlrev))
        (current-buffer))
       ((setq buffer (fsvn-get-exists-browse-buffer directory-urlrev))
        buffer)
       (t
        (setq type 'draw)
-       (setq info (fsvn-get-info-entry directory-urlrev))
-       (when (null info)
-         (error "%s is not a repository" directory-urlrev))
-       (fsvn-browse-create-repos-buffer info))))
+       (fsvn-browse-create-repos-buffer directory-urlrev))))
     (setq comparer fsvn-browse-ls-comparer)
     (when (memq type '(revert draw))
       (let (buffer-read-only)
         (erase-buffer)
         (fsvn-browse-mode)
+        (fsvn-browse-repos-start-info-process directory-urlrev)
         (setq fsvn-browse-ls-comparer 
               (or
                (and comparer 
@@ -974,13 +959,14 @@ PATH is each executed path."
                           (cdr (assq 'repository fsvn-browse-ls-comparator-alist)))
                     comparer)
                'fsvn-browse-ls-entry-name-comparer))
-        (fsvn-browse-set-repos-local-variables info)
-        (fsvn-browse-draw-topmost-header info)
-        (fsvn-browse-ls-insert-repos-directory info directory-urlrev)
-        (set-buffer-modified-p nil))
-      (fsvn-browse-set-repos-directory info)
-      (fsvn-browse-goto-first-file))))
+        (insert (format " Revision: \n"))
+        (insert (format " Root: \n"))
+        (insert (format " Path: \n"))
+        (insert (format "\n"))
+        (fsvn-browse-repos-start-process directory-urlrev goto-file)
+        (set-buffer-modified-p nil)))))
 
+;; todo when repos buffer open file then split window and async show file contents with coding-system
 (defun fsvn-browse-draw-local-directory (directory &optional type)
   (let ((parent-info (fsvn-working-copy-info directory))
         buffer comparer)
@@ -1080,8 +1066,8 @@ PATH is each executed path."
   (let* ((subdir (fsvn-browse-subdir directory nil)))
     (fsvn-browse-subdir!info subdir info)))
 
-(defun fsvn-browse-create-repos-buffer (info)
-  (generate-new-buffer (fsvn-url-decode-string (fsvn-xml-info->entry=>url$ info))))
+(defun fsvn-browse-create-repos-buffer (urlrev)
+  (generate-new-buffer (fsvn-urlrev-url urlrev)))
 
 (defun fsvn-browse-create-local-buffer (directory)
   (generate-new-buffer (fsvn-file-name-nondirectory directory)))
@@ -1196,7 +1182,7 @@ PATH is each executed path."
        (let* ((dir (car subdir))
               (url (fsvn-browse-subdir-directory-url subdir)))
          (fsvn-browse-goto-directory dir)
-         (fsvn-browse-switch-directory-buffer url 'revert)
+         (fsvn-browse-switch-directory-buffer url 'revert file)
          (mapc
           (lambda (file)
             (fsvn-browse-put-mark fsvn-mark-mark-char file))
@@ -1483,6 +1469,116 @@ PATH is each executed path."
     (unless files
       (error "No file on this line"))
     files))
+
+;; async repository browser
+
+(defvar fsvn-browse-repos-main-process nil)
+(defvar fsvn-browse-repos-entries nil)
+(defvar fsvn-browse-user-waiting-threshold 2)
+
+(defun fsvn-browse-repos-process-filter (proc event)
+  (fsvn-process-event-handler proc event
+    (goto-char (process-mark proc))
+    (insert-before-markers event)
+    (goto-char (point-min))
+    (let (entries start end)
+      ;;FIXME if --xml output changed..
+      (while (and (re-search-forward "^[ \t]*<entry\\b" nil t)
+                  (setq start (match-beginning 0))
+                  (re-search-forward "^[ \t]*</entry>" nil t)
+                  (setq end (match-end 0)))
+        (setq entries
+              (cons (fsvn-xml-parse-lists-entry start end) entries))
+        (delete-region (point-min) end))
+      (setq entries (nreverse entries))
+      (let ((buffer (process-get proc 'fsvn-browse-repos-buffer)))
+        (when (buffer-live-p buffer)
+          (with-current-buffer buffer
+            ;; avoid when other process is running.
+            (when (eq fsvn-browse-repos-main-process proc)
+              (save-excursion
+                (fsvn-browse-repos-async-draw-entries entries)))))))))
+
+(defun fsvn-browse-repos-process-sentinel (proc event)
+  (fsvn-process-exit-handler proc event
+    (let ((buffer (process-get proc 'fsvn-browse-repos-buffer)))
+      (when (buffer-live-p buffer)
+        (with-current-buffer buffer
+          (setq fsvn-browse-repos-main-process nil)
+          (let ((start (process-get proc 'fsvn-browse-start-seconds))
+                (goto-file (process-get proc 'fsvn-browse-goto-file)))
+            ;; goto a intuitive file as long as program can.
+            ;; Stay the cursor if async process spent too much seconds.
+            (when (< (float-time) (+ start fsvn-browse-user-waiting-threshold))
+              (or (and goto-file (fsvn-browse-goto-file goto-file))
+                  (fsvn-browse-goto-first-file)))))))
+    (kill-buffer (current-buffer))))
+
+(defun fsvn-browse-repos-info-process-sentinel (proc event)
+  (fsvn-process-exit-handler proc event
+    (let ((info (car (fsvn-xml-parse-info)))
+          (buffer (process-get proc 'fsvn-browse-repos-buffer)))
+      (cond
+       ((null info)
+        (message "Not a repository"))
+       ((buffer-live-p buffer)
+        (with-current-buffer buffer
+          (let ((path (fsvn-info-repos-path info))
+                buffer-read-only)
+            (save-excursion
+              (fsvn-browse-set-repos-local-variables info)
+              (fsvn-browse-draw-topmost-header info)
+              (fsvn-browse-draw-path path)
+              (fsvn-browse-set-repos-directory info)))))))
+    (kill-buffer (current-buffer))))
+
+(defun fsvn-browse-repos-start-info-process (urlrev)
+  (let* ((buffer (fsvn-make-temp-buffer))
+        (proc (fsvn-start-command "info" buffer "--xml" urlrev)))
+    (set-process-sentinel proc 'fsvn-browse-repos-info-process-sentinel)
+    (process-put proc 'fsvn-browse-repos-buffer (current-buffer))
+    proc))
+
+(defun fsvn-browse-repos-point-entry ()
+  (let ((name (fsvn-current-filename)))
+    (when name
+      (catch 'found
+        (mapc
+         (lambda (x)
+           (when (string= (fsvn-xml-lists->list->entry=>name$ x) name)
+             (throw 'found x)))
+         fsvn-browse-repos-entries)
+        nil))))
+
+(defun fsvn-browse-repos-insert-entry (entry)
+  (fsvn-browse-ls-insert-repos-entry entry)
+  (setq fsvn-browse-repos-entries 
+        (cons entry fsvn-browse-repos-entries)))
+
+(defun fsvn-browse-repos-async-draw-entries (entries)
+  (let* ((proc fsvn-browse-repos-main-process)
+         buffer-read-only)
+    (save-excursion
+      (mapc
+       (lambda (entry)
+         (goto-char (point-max))
+         (fsvn-browse-repos-insert-entry entry))
+       entries))
+    (set-buffer-modified-p nil)))
+
+(defun fsvn-browse-repos-start-process (urlrev goto-file)
+  (let* ((buffer (fsvn-make-temp-buffer))
+         (proc (fsvn-start-command "list" buffer
+                                   "--xml"
+                                   urlrev)))
+    (set-process-filter proc 'fsvn-browse-repos-process-filter)
+    (set-process-sentinel proc 'fsvn-browse-repos-process-sentinel)
+    (process-put proc 'fsvn-browse-repos-buffer (current-buffer))
+    (process-put proc 'fsvn-browse-start-seconds (float-time))
+    (process-put proc 'fsvn-browse-goto-file goto-file)
+    (set (make-local-variable 'fsvn-browse-repos-main-process) proc)
+    (set (make-local-variable 'fsvn-browse-repos-entries) nil)
+    proc))
 
 
 
@@ -1793,8 +1889,7 @@ PATH is each executed path."
     (cond
      (fsvn-browse-repos-p
       (let ((above (fsvn-urlrev-dirname (fsvn-browse-current-directory-urlrev))))
-        (fsvn-browse-switch-directory-buffer above))
-      (fsvn-browse-goto-file filename))
+        (fsvn-browse-switch-directory-buffer above nil filename)))
      ((not (fsvn-file-versioned-directory-p path))
       (dired paren-dir)
       (dired-goto-file path))
@@ -1887,7 +1982,8 @@ PATH is each executed path."
          (file (fsvn-current-filename)))
     (fsvn-browse-switch-directory-buffer 
      urlrev (and fsvn-browse-repos-p 
-                 (if (string= currev newrev) 'draw 'revert)))
+                 (if (string= currev newrev) 'draw 'revert))
+     file)
     (when file
       (fsvn-browse-goto-file file))))
 
