@@ -177,11 +177,11 @@
 
 (defun fsvn-buffer-repos-uuid (&optional info)
   (let ((info (or info fsvn-buffer-repos-info)))
-    (aref info 0)))
+    (and info (aref info 0))))
 
 (defun fsvn-buffer-repos-root (&optional info)
   (let ((info (or info fsvn-buffer-repos-info)))
-    (aref info 1)))
+    (and info (aref info 1))))
 
 (defun fsvn-buffer-new-repos-info (url)
   (let ((info (fsvn-get-info-entry url)))
